<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/ly2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_auto"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@android:drawable/ic_menu_report_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/model_car"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/cost_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cost"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/name_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ly2"
        android:gravity="end"
        android:text="@string/site"
        android:textAlignment="textEnd"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>